[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]
cached = "0.56.0"
clap = { version = "4.5.53", features = ["derive"] }
itertools = "0.14.0"
ndarray = "0.17.1"
ndarray-linalg = { version = "0.18.0", features = ["openblas"] }
nom = "8.0.0"
rayon = "1.11.0"
z3 = "0.19.7"

[lints.rust]
# unused = "allow"
